# onscripter-en

./: .gitignore  .gitmodules  AnimationInfo.cpp  AnimationInfo.h  CMakeLists.txt  DirectReader.cpp  Layer.cpp  ONScripter.h  ONScripterLabel.cpp  ONScripterLabel.h  ONScripterLabel_command.cpp  ONScripterLabel_event.cpp  ONScripterLabel_file2.cpp  ONScripterLabel_image.cpp  ONScripterLabel_rmenu.cpp  ONScripterLabel_sound.cpp  ONScripterLabel_text.cpp  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_effect.cpp  ONScripter_effect_breakup.cpp  ONScripter_effect_cascade.cpp  ONScripter_effect_trig.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_file2.cpp  ONScripter_image.cpp  ONScripter_rmenu.cpp  ONScripter_sound.cpp  ONScripter_text.cpp  README.md  ScriptHandler.cpp  ScriptHandler.h  ScriptParser.h  graphics_blend.h  graphics_resize.h  graphics_routines.cpp  onscripter.cpp  onscripter.rc  resize_image.cpp  (+1 more)
.github/workflows/: cmake.yml
tools/: CMakeLists.txt  arcdec.cpp
